# Computational-Math-2025

Р3208/kaparulin_408737/lab2/: Comp_math_2.pdf:Zone.Identifier  README.md  main.py  pyproject.toml  test.ipynb  test.txt
Р3208/kaparulin_408737/lab2/non_lin_eq/: Main.py  PolDel.py  Secant.py  SimpleIter.py  __init__.py
Р3208/kaparulin_408737/lab2/sys_non_lin_eq/: Newton.py
Р3208/kaparulin_408737/lab3/: main.py  pyproject.toml
Р3208/kaparulin_408737/lab3/methods/: Rectangle.py  Simpson.py  Trapezoid.py  __init__.py
Р3208/kaparulin_408737/lab4/: 1  main.py  pyproject.toml
Р3208/kaparulin_408737/lab5/: data2.txt  data3.txt  main.py  pyproject.toml
Р3208/kaparulin_408737/lab6/: main.py  pyproject.toml
