[tool.poetry]
name = "lab2"
version = "0.1.0"
description = ""
authors = ["Luhter1 <kaparulinti@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
numpy = "^2.2.4"
matplotlib = "^3.10.1"
simpy = "^4.1.1"
sympy = "^1.13.3"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
